[package]
name = "vesting"
version = "0.1.0"
description = "A simple SOL vesting program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vesting"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
anchor-spl = "1.0.2"

[dev-dependencies]
litesvm = "=0.7.1"
solana-sdk = "2.3"
